--- a/.gitignore
+++ b/.gitignore
@@ -170,8 +170,26 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-
-# user data related information
+# Folders to ignore
 chrome-user-data/
 files/
 logs/
+myvenv/
+__pycache__/
+.pytest_cache/
+bin/
+include/
+lib/
+lib64/
+
+# Files to ignore
+download_reports.xlsx
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.log
+*.xlsx
+.env
+.venv
+pyvenv.cfg
