added report management with excel for daily updadte and also added google sheet api for real time update in excel sheet

--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
     "current_category": null,
     "current_subcategory": null,
     "completed_categories": [
-        "HEALTH_INSURANCE"
+        "HEALTH_INSURANCE",
+        "AUTO_INSURANCE"
     ],
     "completed_subcategories": {},
     "lastPage": 1,
