--- a/config.json
+++ b/config.json
@@ -2,8 +2,7 @@
     "current_category": null,
     "current_subcategory": null,
     "completed_categories": [
-        "HEALTH_INSURANCE",
-        "AUTO_INSURANCE"
+        "HEALTH_INSURANCE"
     ],
     "completed_subcategories": {},
     "lastPage": 1,
