--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,34 @@
 attrs==24.3.0
+cachetools==5.5.1
 certifi==2024.12.14
+charset-normalizer==3.4.1
 et_xmlfile==2.0.0
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.10
 numpy==2.2.1
+oauthlib==3.2.2
 openpyxl==3.1.5
 outcome==1.3.0.post0
 pandas==2.2.3
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyparsing==3.2.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 selenium==4.27.1
 six==1.17.0
 sniffio==1.3.1
@@ -18,6 +37,7 @@ trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
+uritemplate==4.1.1
 urllib3==2.3.0
 websocket-client==1.8.0
 wsproto==1.2.0
